--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ssfx",
-  "version": "0.0.1",
+  "version": "0.0.2-fix",
   "description": "A set of componets that apply css keyframe animation on scroll action.",
   "main": "src/index.js",
   "scripts": {
